--- a/books.css
+++ b/books.css
@@ -81,12 +81,14 @@ body {
   font-family: "Inika", sans-serif;
   font-size: 15px;
   margin-top: 25px;
+  width: 150px;
+  margin-left: 55px;
 }
 
 .grid-item img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .prod {
